<resources>
    <string name="app_name">Fruit Sales App</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logged_in_as">Logged in as: %1$s</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="products_today">Products today</string>
    <string name="products_today_by_category">Products today - %1$s</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="order_history">Order history</string>
    <string name="balance">Balance</string>
    <string name="balance_unknown">Balance: --</string>
    <string name="available_balance">Available balance: %1$s</string>
    <string name="balance_after_checkout">Remaining balance: %1$s</string>
    <string name="insufficient_balance">Not enough balance to complete this order</string>
    <string name="product_image">Product image</string>
    <string name="category_image">Category image</string>
    <string name="current_balance_label">Current balance</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="demo_account_hint">Demo accounts: admin/123456 or seller/123456</string>
    <string name="enter_credentials">Please enter username and password</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="login_success">Login successful</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="checkout">Checkout</string>
    <string name="empty_cart">Cart is empty</string>
    <string name="total_default">Total: 0</string>
    <string name="total_format">Total: %1$s</string>
    <string name="invalid_quantity">Quantity must be greater than 0</string>
    <string name="login_required_for_order">You need to login to place an order</string>
    <string name="cancel">Cancel</string>
    <string name="added_to_cart">Added to cart successfully</string>
    <string name="product_meta">Price: %1$s / %2$s\nStock: %3$d</string>
    <string name="receipt_header">Order #%1$d\nCustomer: %2$s\nPaid at: %3$s</string>
    <string name="receipt_balance">Balance after checkout: %1$s</string>
    <string name="today_product_count">Today has %1$d products</string>
    <string name="order_count">%1$d orders available</string>
    <string name="category_count">%1$d categories available</string>
</resources>